--- a/playbook/ostraca.yml
+++ b/playbook/ostraca.yml
@@ -1,6 +1,6 @@
 - hosts: all
   user: ec2-user
-  sudo: yes
+  become: yes
   tasks:
     - name: install Apache
       yum: name=httpd state=latest
