--- a/playbook/ostraca.yml
+++ b/playbook/ostraca.yml
@@ -5,7 +5,9 @@
     - name: install Apache
       yum: name=httpd state=latest
 
-    - copy: src=./index.html dest=/var/www/html/ owner=ec2-user group=ec2-user
+    - copy: src=./sources/index.html dest=/var/www/html/ owner=ec2-user group=ec2-user
+
+    - copy: src=./sources/logo.png dest=/var/www/html/ owner=ec2-user group=ec2-user
 
     - name: enable & start service httpd
       systemd: name=httpd state=started enabled=true
